Update report with interpretation text

--- a/macro-credit-sim/notebooks/macro-vecm-demo.ipynb
+++ b/macro-credit-sim/notebooks/macro-vecm-demo.ipynb
@@ -443,6 +443,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4d6abf6a",
+   "metadata": {},
+   "source": [
+    "## Interpretations: ECL Paths\n",
+    "\n",
+    "\n",
+    "Inflation scenario: ECL rises steadily (slow-burn). Corporates dominate dollar losses, SMEs most sensitive proportionally.\n",
+    "\n",
+    "Recession scenario: ECL spikes early but fades (mean reversion of GDP).\n",
+    "\n",
+    "Stagflation: blended effect, moderate and persistent.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "06bc900b",
    "metadata": {},
    "source": [
@@ -489,18 +504,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8e5dd08d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "f2c7e60f",
+   "id": "db50e343",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Interpretations: IRFs\n",
+    "\n",
+    "Positive GDP shocks are persistent.GDP shock → CPI: shows how inflation responds to growth shocks. A negative GDP shock dampens CPI in the short run, but fades after a few quarters.\n",
+    "\n",
+    "CPI Shocks persists, though the effect dampens by quarter 5-6. So inflation has inertia but not indefinitely. CPI shock → GDP: shows inflation erodes growth gradually, producing a slower adjustment.\n",
+    "\n",
+    "The IRFs tell me how shocks propagate dynamically. For example, inflation shocks in this model lower GDP in the short run, while GDP shocks raise CPI. This aligns with real-world transmission — growth tends to be inflationary, while inflation shocks can slow growth. For stress testing, this is useful because I can map a macro shock into consistent multi-quarter paths across variables, rather than shocking each independently. It ensures internal consistency when building CCAR-style scenarios.”"
+   ]
   }
  ],
  "metadata": {
